# FastAPI_SQLALchemy_Alembic

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: a54f818a5dea_create_fastapi_users_user_table.py  ebe4ab672c90_create_fastapi_users_oauth_account_table.py
app/: main.py  routers.py
app/api/endpoints/: fastapi_users.py  test.py
app/constant/: app_status.py  master.py
app/core/: __init__.py  exceptions.py  settings.py
app/db/: database.py
app/models/: __init__.py
app/services/: __init__.py  fastapi_users.py
app/utils/: response.py  send_email.py
db_compose/: docker-compose.yml
